@@ -72,7 +72,8 @@ query_axfr(struct nsd *nsd, struct query *query)
 		assert(query->axfr_zone->soa_rrset->rr_count == 1);
 		added = packet_encode_rr(query,
 					 query->axfr_zone->apex,
-					 &query->axfr_zone->soa_rrset->rrs[0]);
+					 &query->axfr_zone->soa_rrset->rrs[0],
+					 query->axfr_zone->soa_rrset->rrs[0].ttl);
 		if (!added) {
 			/* XXX: This should never happen... generate error code? */
 			abort();
@@ -107,7 +108,8 @@ query_axfr(struct nsd *nsd, struct query *query)
 					added = packet_encode_rr(
 						query,
 						query->axfr_current_domain,
-						&query->axfr_current_rrset->rrs[query->axfr_current_rr]);
+						&query->axfr_current_rrset->rrs[query->axfr_current_rr],
+						query->axfr_zone->soa_rrset->rrs[query->axfr_current_rr].ttl);
 					if (!added)
 						goto return_answer;
 					++total_added;
@@ -131,7 +133,8 @@ query_axfr(struct nsd *nsd, struct query *query)
 	assert(query->axfr_zone->soa_rrset->rr_count == 1);
 	added = packet_encode_rr(query,
 				 query->axfr_zone->apex,
-				 &query->axfr_zone->soa_rrset->rrs[0]);
+				 &query->axfr_zone->soa_rrset->rrs[0],
+				 query->axfr_zone->soa_rrset->rrs[0].ttl);
 	if (added) {
 		++total_added;
 		query->tsig_sign_it = 1; /* sign last packet */
