@@ -147,7 +147,10 @@ struct query;
  * Encode RR with OWNER as owner name into QUERY.  Returns the number
  * of RRs successfully encoded.
  */
-int packet_encode_rr(struct query *query, domain_type *owner, rr_type *rr);
+int packet_encode_rr(struct query *query,
+			domain_type *owner,
+			rr_type *rr,
+			uint32_t ttl);
 
 /*
  * Encode RRSET with OWNER as the owner name into QUERY.  Returns the
