@@ -1,5 +1,6 @@
 8 January 2014: Matthijs
 	- Bugfix #510: Use a different zone stats file per process.
+	- Bugfix #542: Match RRSIG TTL with SOA TTL in negative response.
 
 2 January 2014: Wouter
 	- Log ip address for sendto failures.
